--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "apiRest.js",
   "scripts": {
-    "start":"node apiRest.js"
+    "start":"node apiRestUser.js"
   },
   "repository": {
     "type": "git",
