subida endpoints user

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "apiRest.js",
   "scripts": {
-    "start": "node ./src/apiRest.js"
+    "start": "node ./src/apiRest.js",
+    "dev":"nodemon ./src/apiRest.js"
   },
   "repository": {
     "type": "git",
